Updated text on minimal example.

--- a/examples.html
+++ b/examples.html
@@ -45,7 +45,7 @@
         <hr>
         <h3>Minimal</h3>
 		<p>
-			Vanilla example &mdash; the absolute minimum amount of code required, no configuration. No autocomplete, either. See the other examples for that.
+			Vanilla example &mdash; the absolute minimum amount of code required, no configuration. It doesn't do anything useful either. See the other examples for that.
 		</p>
 		<div id="basic"/>
     </div>
