--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>jQuery Tag-it!</title> 
+	<title>Sencha Keypad</title> 
 
     <!-- If you're reading the source, see the Examples page for cleaner stuff to learn from. -->
 
@@ -40,7 +40,7 @@
  
 <div id="wrapper"> 
 	<div id="header"> 
-        <img src="tag_icon.png" id="tag-icon">
+        <!--<img src="keypad_icon.png" id="keypad-icon">-->
 		<h1><span id="title-sencha">Sencha Touch</span><span id="title-keypad">Keypad</span></h1> 
 		<p>
 		    <em>Simple and configurable tag editing widget with autocomplete support.</em>
@@ -61,7 +61,7 @@
     </ul>
 
     <h2>Demo</h2>
-		<div id="basic"/>
+	<p id="basic"/>
 
     <p>
         <a href="examples.html" class="highlighted">See more examples</a> of different configuations.
