Fixed links in index.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			</p> 
 			
 			<ul id="nav">
-				<li><a href="http://github.com/msmeeks/keypad">Source</a></li>
-				<li><a href="http://github.com/msmeeks/keypad/issues">Bugs</a></li>
-				<li><a href="http://github.com/msmeeks/keypad/blob/master/README.markdown">Docs</a></li>
-				<li><a href="http://github.com/msmeeks/keypad/zipball/master">Download</a></li>
+				<li><a href="http://github.com/msmeeks/sencha-keypad">Source</a></li>
+				<li><a href="http://github.com/msmeeks/sencha-keypad/issues">Bugs</a></li>
+				<li><a href="http://github.com/msmeeks/sencha-keypad/blob/master/README.markdown">Docs</a></li>
+				<li><a href="http://github.com/msmeeks/sencha-keypad/zipball/master">Download</a></li>
 			</ul>
 		</div>
 		
