Added title to the demo keypad.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script>
 		Ext.setup({
 			onReady: function () {
-				var basic = new Ext.ux.Keypad();
+				var basic = new Ext.ux.Keypad(title: 'Keypad');
 				basic.render('basic');
 			}
 		});
