--- a/examples/basic.html
+++ b/examples/basic.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Basic Example</title>
 
-    <!-- Sencha Touch 1.1.1 -->
-    <script type="text/javascript" charset="utf-8" src="../js/sencha-touch-1.1.1/sencha-touch.js"></script>
-    <link rel="stylesheet" type="text/css" href="../js/sencha-touch-1.1.1/resources/css/sencha-touch.css">
+    <!-- Sencha Touch 2.1.0 -->
+    <link rel="stylesheet" type="text/css" href="../js/sencha-touch-2.1.0/resources/css/sencha-touch.css">
+    <script type="text/javascript" charset="utf-8" src="../js/sencha-touch-2.1.0/sencha-touch-all-debug.js"></script>
 
     <!-- The real deal -->
     <script src="../js/Keypad.js" type="text/javascript" charset="utf-8"></script>
@@ -14,14 +14,13 @@
     <script>
 		Ext.setup({
 			onReady: function () {
-				var basic = new Ext.ux.Keypad();
-				basic.render('basic');
+				var basic = new Ext.ux.Keypad({renderTo: 'basic'});
 			}
 		});
     </script>
 
 </head>
-<body>
-	<div id="basic"/>
+<body style="background-color: lightgray;">
+    <div id="basic"/>
 </body>
 </html>
